<resources>
	<string name="app_name">Yu-Gi-Oh! Card Database</string>
	<string name="text_button_load_cards">Load more cards</string>
	<string name="loading_message">Getting more cards</string>
	<string name="searching_message"> searching… </string>
	<string name="search_card"> Search Card </string>
	<string name="not_result_search"> Not found </string>
	<string name="search_message">Press Enter to search in Database</string>
	<string name="menu_main_activity_my_decks">My Decks</string>
	<string name="menu_main_activity_advanced_search">Advanced Search</string>
	<string name="any_text">%1$s</string>
	<string name="ocg_ban_list">OCG\n%1$s</string>
	<string name="tcg_ban_list">TCG\n%1$s</string>
	<string name="pendulum_scale">Scale %1$d</string>
	<string name="level_info">Level\n%1$d</string>
	<string name="linkval_info">Linkval\n%1$d</string>
	
	<!-- Cards -->
	<string name="type">Card Type</string>
	
	<string name="monster_card">Monster</string>
	<string name="spell_card">Spell</string>
	<string name="trap_card">Trap</string>
	<string name="skill_card">Skill</string>
	
	<!-- Options to advanced search -->
	<string name="card_type">Type</string>
	<string name="card_race">Race</string>
	<string name="card_attribute">Attribute</string>
	<string name="card_level">Level</string>
	<string name="card_atk">Atk</string>
	<string name="card_def">Def</string>
	<string name="card_scale">Scale</string>
	<string name="card_archetype">Archetype</string>
	<string name="card_format">Format</string>
	
	<!-- Message internet -->
	<string name="connected_to_internet">Connected to internet</string>
	<string name="not_connected_to_internet">Not connected to the internet</string>
	<string name="add_to_my_deck">Add to my deck</string>
	
	<string name="results_of_search">Results</string>
	<string name="create_new_deck">Create new deck</string>
	<string name="your_decks">Your decks</string>
	<string name="close">Close</string>
	<string name="cancel">Cancel</string>
	<string name="deck_s_name">Deck\'s name</string>
	<string name="no_decks">You don\'t have any decks</string>
	<string name="create">Create</string>
	<string name="copies">Copies:</string>
	<string name="legal_deck">It can be used in duels</string>
	<string name="illegal_deck">It cannot be used in duels</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>