<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<ImageButton
		android:id="@+id/image_button_close"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_margin="16dp"
		android:background="@color/black"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/text_view_title"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/guideline_divider_option"
		app:srcCompat="@drawable/close_search_icon"
		tools:ignore="contentDescription,SpeakableTextPresentCheck" />
	
	<TextView
		android:id="@+id/text_view_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:maxLines="2"
		android:layout_margin="16dp"
		android:gravity="center"
		android:text="@string/menu_main_activity_advanced_search"
		android:textSize="24sp"
		android:textStyle="bold"
		app:drawableStartCompat="@drawable/advanced_search"
		app:layout_constraintEnd_toStartOf="@+id/image_button_close"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toTopOf="@id/guideline_divider_option"
		app:layout_constraintTop_toTopOf="parent" />
	
	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline_divider_option"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.12" />
	
	<ScrollView
		android:id="@+id/scroll_options"
		app:layout_constraintTop_toBottomOf="@id/guideline_divider_option"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_width="match_parent"
		android:layout_height="0dp">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:id="@+id/text_view_radio_group"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:text="@string/type"
				android:textSize="24sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toTopOf="@+id/radio_group"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
			
			<RadioGroup
				android:id="@+id/radio_group"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="16dp"
				app:layout_constraintTop_toBottomOf="@+id/text_view_radio_group"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				android:orientation="vertical">
				
				<RadioButton
					android:id="@+id/radioButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:drawableBottom="@drawable/monster_card_s"
					android:text="@string/monster_card"
					android:textSize="20sp" />
				
				<RadioButton
					android:id="@+id/radio_button_spell"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:drawableBottom="@drawable/spell_card_s"
					android:text="@string/spell_card"
					android:textSize="20sp" />
			
			</RadioGroup>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>