<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout_info_card"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:background="@color/colorXYZMonster"
	tools:context=".ui.view.CardInfoFragment">
	
	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/button_add_to_deck"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:src="@drawable/add_to_deck_f21_r"
		tools:ignore="RelativeOverlap,contentDescription,SpeakableTextPresentCheck" />
	
	<ScrollView
		android:id="@+id/main_scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_centerInParent="true">
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<ImageView
				android:id="@+id/image_view_full_card"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="12dp"
				app:layout_constraintBottom_toTopOf="@+id/card_detail"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:ignore="ContentDescription"
				tools:src="@drawable/_90809975" >
			</ImageView>
			
			<androidx.cardview.widget.CardView
				android:id="@+id/card_detail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="12dp"
				app:cardBackgroundColor="#002945"
				app:contentPadding="12dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/image_view_full_card">
				
				<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/layout_data_card"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
					
					<TextView
						android:id="@+id/text_view_id"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:drawableBottomCompat="@drawable/id_s"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider1"
						app:layout_constraintEnd_toStartOf="@+id/text_view_type"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:text="90809975" />
					
					<TextView
						android:id="@+id/text_view_atk"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:drawableBottomCompat="@drawable/atk_s"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider2"
						app:layout_constraintEnd_toStartOf="@+id/text_view_def"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/guidelineDivider1"
						tools:text="2200" />
					
					<TextView
						android:id="@+id/text_view_type"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider1"
						app:layout_constraintEnd_toStartOf="@+id/text_view_race"
						app:layout_constraintStart_toEndOf="@+id/text_view_id"
						app:layout_constraintTop_toTopOf="parent"
						tools:drawableBottomCompat="@drawable/xyz_monster_s"
						tools:text="XYZ Monster" />
					
					<TextView
						android:id="@+id/text_view_def"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:drawableBottomCompat="@drawable/def_s"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider2"
						app:layout_constraintEnd_toStartOf="@id/text_view_level_monster"
						app:layout_constraintStart_toEndOf="@+id/text_view_atk"
						app:layout_constraintTop_toBottomOf="@+id/guidelineDivider1"
						tools:text="0" />
					
					<TextView
						android:id="@+id/text_view_race"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider1"
						app:layout_constraintEnd_toStartOf="@+id/text_view_attribute"
						app:layout_constraintStart_toEndOf="@+id/text_view_type"
						app:layout_constraintTop_toTopOf="parent"
						tools:drawableBottomCompat="@drawable/aqua_s"
						tools:text="Aqua" />
					
					<TextView
						android:id="@+id/text_view_level_monster"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:text="@string/level_info"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider2"
						app:layout_constraintEnd_toStartOf="@id/text_view_archetype"
						app:layout_constraintStart_toEndOf="@+id/text_view_def"
						app:layout_constraintTop_toBottomOf="@+id/guidelineDivider1"
						tools:drawableBottomCompat="@drawable/level_xyz_monster_s" />
					
					<TextView
						android:id="@+id/text_view_attribute"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider1"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@+id/text_view_race"
						app:layout_constraintTop_toTopOf="parent"
						tools:drawableBottomCompat="@drawable/water_s"
						tools:text="WATER" />
					
					<TextView
						android:id="@+id/text_view_archetype"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:drawableBottomCompat="@drawable/archetype_s"
						app:layout_constraintBottom_toTopOf="@+id/guidelineDivider2"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@id/text_view_level_monster"
						app:layout_constraintTop_toBottomOf="@+id/guidelineDivider1"
						tools:text="Frog" />
					
					<TextView
						android:id="@+id/text_view_scale"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:text="@string/pendulum_scale"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:drawableBottomCompat="@drawable/scale_pendulum_s"
						app:layout_constraintBottom_toTopOf="@id/guidelineDivider3"
						app:layout_constraintEnd_toStartOf="@id/text_view_ban_list_OCG"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/guidelineDivider2"
						tools:visibility="gone" />
					
					<TextView
						android:id="@+id/text_view_ban_list_OCG"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:text="@string/ocg_ban_list"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@id/guidelineDivider3"
						app:layout_constraintEnd_toStartOf="@+id/textViewBanListTCG"
						app:layout_constraintStart_toEndOf="@+id/text_view_scale"
						app:layout_constraintTop_toBottomOf="@id/guidelineDivider2"
						tools:drawableBottomCompat="@drawable/banlist_banned_s" />
					
					<TextView
						android:id="@+id/textViewBanListTCG"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:autoSizeTextType="uniform"
						android:text="@string/tcg_ban_list"
						android:textAlignment="center"
						android:textColor="@color/white"
						android:textSize="17sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toTopOf="@id/guidelineDivider3"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toEndOf="@id/text_view_ban_list_OCG"
						app:layout_constraintTop_toBottomOf="@id/guidelineDivider2"
						tools:drawableBottomCompat="@drawable/banlist_unlimited_s" />
					
					<TextView
						android:id="@+id/textViewDescription"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:justificationMode="inter_word"
						android:padding="10dp"
						android:textColor="@color/white"
						android:textSize="18sp"
						android:textStyle="bold"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toBottomOf="@id/guidelineDivider3"
						tools:text="Description:\n2 Level 2 Aqua-Type monsters Once per turn, during the Standby Phase: You can detach 1 Xyz Material from this card; Special Summon 1 &quot;Frog&quot; monster from your Deck. Once per turn, during either player's turn, when your opponent activates a Spell/Trap Card, or monster effect: You can send 1 Aqua-Type monster from your hand or face-up from your field to the Graveyard; negate the activation, and if you do, destroy that card, then you can Set it to your field. If this card is sent to the Graveyard: You can target 1 WATER monster in your Graveyard; add it to your hand." />
					
					<androidx.constraintlayout.widget.Guideline
						android:id="@+id/guidelineDivider1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						app:layout_constrainedHeight="true" />
					
					<androidx.constraintlayout.widget.Guideline
						android:id="@+id/guidelineDivider2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						app:layout_constrainedHeight="true" />
					
					<androidx.constraintlayout.widget.Guideline
						android:id="@+id/guidelineDivider3"
						android:layout_width="wrap_content"
						android:layout_height="0dp"
						android:orientation="horizontal"
						app:layout_constrainedHeight="true" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</androidx.cardview.widget.CardView>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</RelativeLayout>
